docs(blog): remove use of :tada:

--- a/website/blog/2019-02-12-v1.0.0-release.md
+++ b/website/blog/2019-02-12-v1.0.0-release.md
@@ -4,7 +4,7 @@ author: Weffe
 authorImageURL: https://github.com/weffe.png
 ---
 
-This is the first release for this react component :tada: 
+This is the first release for this react component!
 
 Features include:
 
