--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -62,6 +62,28 @@
       },
       "version-1.0.0-more-resources": {
         "title": "More Resources"
+      },
+      "version-2.1.1-circle": {
+        "title": "Circle"
+      },
+      "version-2.1.1-create": {
+        "title": "create"
+      },
+      "version-2.1.1-paragraphblock": {
+        "title": "Paragraph Block"
+      },
+      "version-2.1.1-placeholderfallback": {
+        "title": "Placeholder Fallback"
+      },
+      "version-2.1.1-textblock": {
+        "title": "Text Block"
+      },
+      "version-2.1.1-create-custom-placeholderfallback": {
+        "title": "Create Custom Placeholder Fallback",
+        "sidebar_label": "Custom Placeholder Fallback"
+      },
+      "version-2.1.1-prebuiltplaceholders": {
+        "title": "Prebuilt Placeholders"
       }
     },
     "links": {
